# moneysage

./: .pre-commit-config.yaml  Justfile  pyproject.toml  ruff.toml
moneysage_api/: manage.py
moneysage_api/moneysage_api/: asgi.py  settings.py  urls.py  wsgi.py
